# MC-RayTracing

./: CMakeLists.txt  LICENSE  README.md  run.sh
lib/camera/: camera.cpp  camera.h
lib/color/: color.h
lib/config/: framebufferConfig.h  screenConfig.h
lib/cuda/: SM.h
lib/fps/: fps.h
lib/intersect/: intersect.h
lib/light/: light.h
lib/material/: material.h
lib/object/: cube.h  object.h  sphere.h
lib/random/: random.cu  random.h
lib/ray/: ray.h
lib/setup/: setup.h
lib/text/: text.h
src/: main.cpp  main.cu
